# DK-picks-optimizer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: Home.py
betting_system/: README.md  bootstrap.py  config.py  config.yaml  logging_utils.py  odds_math.py  requirements.txt  schemas.py
betting_system/api/: main.py
betting_system/betting_system/: config.py  logging_utils.py  odds_math.py  schemas.py
betting_system/dashboard/: app.py  demo_slate.py  market_data.py  recommend.py  shap_panel.py  terminal_page.py  terminal_styles.py
betting_system/data/: player_aliases.yaml
betting_system/data/fixtures/: calibration_holdout.csv
betting_system/markets/: __init__.py  base.py  edge_evaluation.py  event_contracts.py  kalshi.py  ledger.py  market_curation.py  market_fixtures.py  market_scoring.py  money_weighted.py  order_book.py  polymarket.py  sports_props.py
betting_system/optimizer/: parlay_builder.py  portfolio.py  staking.py
betting_system/pipeline/: backtest.py  features.py  fixtures_loader.py  ingest.py  ingest_stats.py  line_shop.py  player_mapping.py  predict.py  predict_slate.py  run_market_pipeline.py  run_pipeline.py  sequence_features.py  train.py
betting_system/tests/: conftest.py  test_features_leakage.py  test_odds_math.py  test_parlay_builder.py
betting_system/worldcup/: __init__.py  features.py  ingest_matches.py  score_model.py
config/: thresholds.yaml
data/sample/: team_stats_sample.csv
docs/: CURSOR_PROMPT.md  DEVELOPMENT_PLAN.md  INTERVIEW.md  MARKET_CREDIBILITY_PLAN.md  PROBABILITY_TO_CAPITAL.md  PRODUCTION_EVIDENCE.md  SECURITY_AND_COMPLIANCE.md  SYSTEM_DESIGN.md  VALIDATION.md
docs/evidence/fixture_smoke_2026_07_23/: README.md  summary.json
schemas/: market_opportunities.schema.json  picks_today.schema.json  trade_ledger.schema.json
scripts/: generate_synthetic_slate.py  plot_calibration.py  write_model_manifest.py
src/dk_picks/: __init__.py  cli.py  config.py  odds.py  recommend.py
src/dk_picks/backtest/: __init__.py  metrics.py
src/dk_picks/data/: __init__.py  import_csv.py  ingest_espn.py  ingest_odds.py  player_stats_espn.py
src/dk_picks/db/: __init__.py  models.py  session.py
src/dk_picks/features/: __init__.py  build.py
src/dk_picks/models/: __init__.py  player_props.py  predict.py  train.py
src/dk_picks/portfolio/: __init__.py  kelly.py  parlay.py
tests/: conftest.py  test_api.py  test_artifact_schemas.py  test_calibration.py  test_config_validation.py  test_dashboard_market_data.py  test_demo_slate.py  test_edge_evaluation.py  test_features.py  test_features_build.py  test_features_contextual.py  test_ingest_stats.py  test_kalshi.py  test_kalshi_fetch.py  test_line_shop.py  test_market_ledger.py  test_market_scoring.py  test_markets.py  test_model_manifest.py  test_money_weighted.py  test_odds.py  test_optimizer.py  test_order_book.py  test_parlay_builder.py  test_pipeline_smoke.py  test_player_mapping.py  test_polymarket.py  test_polymarket_fetch.py  test_predict.py  test_recommend.py  test_run_market_pipeline.py  test_schemas.py  test_sequence_features.py  test_train.py  test_worldcup.py
tests/optimizer/: conftest.py  test_portfolio.py
tests/pipeline/: test_run_market_pipeline_smoke.py
