[project]
name = "dk-picks-optimizer"
version = "0.1.0"
description = "ML-driven DraftKings pick optimizer with bankroll and parlay correlation modeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.38",
    "plotly>=5.24",
    "pyyaml>=6.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[project.scripts]
dk-picks = "dk_picks.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dk_picks"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
