[project]
name = "dk-picks-optimizer"
version = "0.1.0"
description = "Calibrated probability forecasting and constrained portfolio optimization for sports props"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.38",
    "plotly>=5.24",
    "pyyaml>=6.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
dk-picks = "dk_picks.cli:app"
dk-pipeline = "betting_system.pipeline.run_pipeline:main"
dk-market-pipeline = "betting_system.pipeline.run_market_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dk_picks"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"app/Home.py" = ["E402"]
"betting_system/dashboard/app.py" = ["E402"]
"scripts/plot_calibration.py" = ["E402"]
"betting_system/pipeline/backtest.py" = ["E741"]
"betting_system/optimizer/portfolio.py" = ["E741"]
"betting_system/tests/*" = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests", "betting_system/tests"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
relative_files = true
omit = [
    "*/tests/*",
    "*conftest*",
    "betting_system/api/*",
    "betting_system/dashboard/*",
    "betting_system/bootstrap.py",
    "betting_system/pipeline/ingest.py",
    "betting_system/pipeline/backtest.py",
    "betting_system/pipeline/train.py",
    "betting_system/schemas.py",
    "betting_system/config.py",
    "betting_system/logging_utils.py",
    "betting_system/odds_math.py",
    "src/dk_picks/cli.py",
    "src/dk_picks/backtest/*",
    "src/dk_picks/config.py",
    "src/dk_picks/data/*",
    "src/dk_picks/db/*",
    "src/dk_picks/features/*",
    "src/dk_picks/models/*",
    "src/dk_picks/portfolio/*",
    "src/dk_picks/recommend.py",
    "betting_system/pipeline/run_pipeline.py",
    "betting_system/pipeline/run_market_pipeline.py",
    "betting_system/pipeline/predict_slate.py",
    "betting_system/pipeline/fixtures_loader.py",
    "betting_system/worldcup/features.py",
    "betting_system/worldcup/ingest_matches.py",
    "streamlit_app.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
